# c2math

./: .gitignore  CMakeLists.txt  CONTRIBUTOR_LICENSE_AGREEMENT.md  Commands.txt  LICENSE  LICENSE-COMMERCIAL  README.md  emitted.c  golden_baseline.sh  my_loader.py  sympy.json  validate_srepr.py
docs/: C Converter Requirements Document.docx
src/: c_codegen.hpp  ir.hpp  ir_builder.hpp  json_exporter.hpp  json_importer.hpp  main.cpp  symbol_table.hpp  sympy_exporter.hpp  sympy_ingestor.hpp
tests/: roundtrip_srepr.sh  run_import_roundtrip.sh  run_json_tests.sh  sum_of_digits.c  test.c
tests/actual-json/: 05_casts.json  07_if_else.json  13_strings.json
tests/expected-json/: 01_const.json  04_calls.json  06_conditional_expr.json  09_for.json  10_switch.json
tests/fr009/: expected.c  input.c  run_fr009_golden.sh
tests/fr009/_work/: out.c  out.json
tests/fr_tests/: 01_const.c  02_arith.c  03_assign.c  04_calls.c  05_casts.c  06_conditional_expr.c  07_if_else.c  08_while.c  09_for.c  10_switch.c  11_arrays.c  12_pointers_basic.c  13_strings.c  14_arith.c  README.md
tests/roundtrip-json/: 02_arith.json  03_assign.json  08_while.json  11_arrays.json  12_pointers_basic.json
